# robodash

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
3d-model/: Robodash Left Bezel.stl  Robodash Left Bottom (1).stl  Robodash Left Bottom.stl  Robodash Left Top.stl  Robodash Right Bezel.stl  Robodash Right Bottom (1).stl  Robodash Right Bottom.stl  Robodash Right Top.stl  Robodash Single Bezel.stl  Robodash Top.3mf  Robodash.3mf  Robodash.f3d  Robodash.stl  Screen.stl  Sun Block (Left).stl  Sun Block (Right).stl  Sun Block Left.stl  robodash.f3d
config/: default.yaml
docs/: ARCHITECTURE.adoc  BUILD.adoc  HARDWARE.adoc  SETUP.adoc  TECHNICAL_DESIGN.adoc  TROUBLESHOOTING.adoc
scripts/: run_tests_headless.sh  setup_can.sh
src/: __init__.py  main.py
src/core/: __init__.py  app.py  config.py  constants.py
src/data/: __init__.py  base.py  can_source.py  emu_protocol.py  mock_source.py  models.py
src/layouts/: __init__.py  base_layout.py  race_layout.py  splash_screen.py
src/themes/: __init__.py  robotechy_dark.py  theme_manager.py
src/utils/: __init__.py  engine_sound.py  smoothing.py  unit_converter.py
src/widgets/: __init__.py  bar_gauge.py  base_widget.py  circular_gauge.py  digital_display.py  metric_box.py  shift_light.py  warning_indicator.py
tests/: __init__.py  conftest.py
tests/screenshots/: .gitkeep
tests/test_data/: test_emu_protocol.py  test_mock_source.py
tests/test_layouts/: test_race_layout.py
tests/test_widgets/: test_circular_gauge.py
