[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robodash"
version = "1.0.0"
description = "Racing dashboard for Toyota Supra Mk4 with ECUMaster EMU Black"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Robotechy"},
]
keywords = [
    "racing",
    "dashboard",
    "raspberry-pi",
    "ecu",
    "can-bus",
    "pyqt5",
    "toyota-supra",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "PyQt5>=5.15.0",
    "python-can>=4.0.0",
    "PyYAML>=6.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
    "pytest-xvfb>=2.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "PyQt5-stubs>=5.15.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
robodash = "src.main:main"

[project.urls]
Homepage = "https://github.com/RobotechyShop/robodash"
Documentation = "https://github.com/RobotechyShop/robodash/tree/main/docs"
Repository = "https://github.com/RobotechyShop/robodash"
Issues = "https://github.com/RobotechyShop/robodash/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Disable specific checks that have false positives with PyQt5
disable_error_code = [
    "method-assign",    # PyQt5 property setters trigger this
    "no-any-return",    # External library returns
    "attr-defined",     # External library attributes
    "valid-type",       # python-can types
    "no-redef",         # PyQt5 property decorators
    "union-attr",       # Optional access patterns
    "arg-type",         # Qt type compatibility
    "assignment",       # Numeric type coercion
    "var-annotated",    # Missing annotations in specific patterns
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
qt_api = "pyqt5"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "screenshot: marks tests that generate screenshots",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
